# cell_size

./: .gitignore  .gitmodules  README.md  cell-size-classify.sh  cell-size-segment.sh  pyproject.toml
demo/: app.py  streamlit_embedding_app.py
notebooks/: biology_plots.py  biology_stats.py  build_report.py  build_report_html.py  build_report_latex.py  classifier_model_eda.ipynb  classifier_selective_rejection_eda.ipynb  classifier_stats.py  filtered_area_analysis.ipynb  latex_report.py  make_report_figures.py  report.md  report.md.template  report.tex  report_biology.md  report_biology.md.template  report_biology.tex  report_stats.py  run_Cellpose-SAM.ipynb
notebooks/latex/: preamble.tex
outputs/2026-03-10/19-21-32/.hydra/: config.yaml  hydra.yaml
outputs/2026-03-10/19-23-22/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-03-10/19-25-54/.hydra/: hydra.yaml
outputs/2026-03-10/19-28-27/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-03-10/19-29-21/.hydra/: config.yaml  hydra.yaml
scripts/: launch_classifier_train_parallel.sh  start.sh
src/cell_size/: __init__.py  classify_main.py  classify_overlays_main.py  csv_writer.py  demo_launcher.py  io_utils.py  main.py  metadata.py  qc_main.py  segmenter.py  streamlit_launcher.py  train_main.py  visualization.py
src/cell_size/classifier/: __init__.py  consensus.py  crop_extractor.py  dataset.py  experiment_tracking.py  inference.py  models.py  morphology_qc.py  trainer.py  visualization.py
src/cell_size/configs/: classify.yaml  classify_overlays.yaml  config.yaml  qc_filter.yaml  train.yaml
src/cell_size/configs/classifier/: default.yaml
src/cell_size/configs/model/: cpsam.yaml
src/cell_size/configs/morphology_qc/: default.yaml
src/cell_size/configs/output/: default.yaml
src/cell_size/configs/segmentation/: membrane.yaml  nucleus.yaml
tests/: test_classifier_frog_metrics.py  test_classifier_models.py  test_classifier_overlays.py  test_classifier_selective_inference.py  test_classifier_train_modes.py  test_morphology_qc.py
